--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="desing/default.css" />
-	<title>Ohmyfood-sass</title>
+	<title>Ohmyfood</title>
 	<script src="https://kit.fontawesome.com/4fc20de488.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
