--- a/pages_html/laPaletteDuGout.html
+++ b/pages_html/laPaletteDuGout.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="header_paletteDuGout">
-            <a href="../index.html" title="Allez à l'accuil">
+            <a href="../index.html" title="Allez à l'accueil">
                 <i class="fas fa-arrow-left"></i>
             </a>
             <img src="../img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo" />
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <section class="restaurant">
+        <div class="restaurant">
             <div class="Restaurant_img">
                 <img src="../img/restaurants/La-palette-du-goût.jpg" alt="La palette du goût" class="paletteDuGout_img" />
             </div>
@@ -143,11 +143,11 @@
                     </article>
                 </div>
             </section>
-        </section>
+        </div>
 
-        <section class="commander">
+        <div class="commander">
             <button class="btn_commander">Commander</button>
-        </section>
+        </div>
     </main>
 
     <!--footer-->
