--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 </head>
 
 <body>
-	<section id="chargement">
+	<!--Spiner-->
+	<div id="chargement">
 		<div id="chargementSpinner">
 		</div>
-	</section>
-
+	</div>
+	<!--header-->
 	<header>
 		<nav class="header">
 			<h1>
