--- a/pages_html/leDeliceDesSens.html
+++ b/pages_html/leDeliceDesSens.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!--header-->
     <header>
         <nav class="header_paletteDuGout">
             <a href="../index.html" title="Allez à l'accueil">
@@ -23,7 +24,7 @@
             <img src="../img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo" />
         </nav>
     </header>
-
+<!--main-->
     <main>
         <div class="restaurant">
             <div class="Restaurant_img">
@@ -37,12 +38,12 @@
                         <i class="fas fa-heart heartHover"></i>
                     </div>
                 </div>
+                <!--menus-->
                 <div class="menus">
                     <article class="menu menu-1">
                         <div class="carteHeader">
                             <h3>
                                 ENTRÉES
-                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
@@ -73,7 +74,6 @@
                         <div class="carteHeader">
                             <h3>
                                 PLATS
-                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
@@ -104,7 +104,6 @@
                         <div class="carteHeader">
                             <h3>
                                 DESSERTS
-                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
